# sdk

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  SHADOW_FEATURE_PLAN.md  flake.nix  rust-analyzer.toml  rustfmt.toml  shadow-lut-accounts.txt  shadow-lut-extend.sh  shell-tools.nix  verify-all
.claude/: settings.json
.github/workflows/: ci.yml
.rsmap/: annotations.toml  api-surface.md  cache.json  index.json  overview.md  relationships.md
hylo-clients/: Cargo.toml
hylo-clients/src/: core.rs  earn_pool_client.rs  earn_pool_stats.rs  exchange_client.rs  idl_type_bridge.rs  instruction_accounts.rs  instructions.rs  jupiter.rs  lib.rs  memo.rs  pda.rs  prelude.rs  program_client.rs  simulate_price.rs  squads.rs  stability_pool_client.rs  syntax_helpers.rs  transaction.rs  trigger_orders_client.rs  util.rs
hylo-clients/src/protocol_state/: accounts.rs  mod.rs  provider.rs  state.rs
hylo-clients/src/router_client/: instructions.rs  mod.rs  transaction_data.rs
hylo-clients/src/token_operation/: exchange.rs  mod.rs  stability_pool.rs
hylo-clients/tests/: earn_pool_stats_tests.rs
hylo-core/: Cargo.toml
hylo-core/proptest-regressions/: conversion.txt  earn_pool_math.txt  exchange_math.txt  interpolated_fees.txt  lst_sol_price.txt  rebalance_math.txt
hylo-core/src/: asset_swap_config.rs  borrow_rate.rs  calculus.rs  conversion.rs  deposit_limiter.rs  earn_pool_math.rs  earn_pool_stats.rs  error.rs  exchange_context.rs  exchange_math.rs  exo_exchange_context.rs  exo_pair.rs  exo_pair_risk.rs  fee_controller.rs  fee_curves.rs  funding_rate.rs  idl_type_bridge.rs  interp.rs  interpolated_fees.rs  kani_generators.rs  levercoin_limiter.rs  lib.rs  lst_sol_price.rs  lst_swap_config.rs  marginal.rs  nav.rs  oracle.rs  proofs.rs  pyth.rs  rebalance_math.rs  rebalance_mode.rs  rebalance_pricing.rs  slippage_config.rs  solana_clock.rs  spl_stake_pool.rs  stability_mode.rs  stability_pool_math.rs  switchboard.rs  total_sol_cache.rs  util.rs  (+2 more)
hylo-core/src/exchange_context/: exo.rs  lst.rs  marginal.rs  mod.rs
hylo-core/src/fees/: controller.rs  curve_controller.rs  curves.rs  interp.rs  mod.rs
hylo-core/src/limiter/: deposit.rs  levercoin.rs  mod.rs  withdraw.rs
hylo-core/src/lst/: mod.rs  sol_price.rs  stake_pool.rs  total_sol_cache.rs
hylo-core/src/rebalance/: math.rs  mod.rs  mode.rs  pnl.rs  pool_drawdown.rs  pricing.rs
hylo-idl/: Cargo.toml
hylo-idl/idls/: hylo_earn_pool.json  hylo_earn_pool_shadow.json  hylo_exchange.json  hylo_exchange_shadow.json  hylo_router.json  hylo_router_shadow.json  hylo_stability_pool.json  hylo_trigger_orders.json  hylo_trigger_orders_shadow.json
hylo-idl/src/: lib.rs  pda.rs  tokens.rs  trigger_orders_ext.rs  type_bridge.rs
hylo-idl/src/account_builders/: concat.rs  earn_pool.rs  exchange.rs  mod.rs  router.rs  stability_pool.rs  swap_settle_accounts.rs  trigger_orders.rs
hylo-idl/src/accounts/: exchange.rs  stability_pool.rs
hylo-idl/src/instruction_builders/: earn_pool.rs  exchange.rs  mod.rs  router.rs  stability_pool.rs  trigger_orders.rs
hylo-idl/src/instructions/: exchange.rs  mod.rs  stability_pool.rs
hylo-jupiter/: Cargo.toml
hylo-jupiter/src/: account_metas.rs  jupiter.rs  lib.rs  quote.rs  util.rs
hylo-nav/: Cargo.toml
hylo-quotes/: Cargo.toml
hylo-quotes/examples/: quote_builder_direct.rs  quote_provider_builder.rs  quote_provider_simulator.rs
hylo-quotes/src/: compute_unit_provider.rs  instruction_builder.rs  lib.rs  lst_provider.rs  prelude.rs  quotable_pair.rs  quote_builder.rs  quote_computer.rs  quote_metadata.rs  quote_provider.rs  quote_simulator.rs  quote_strategy.rs  rpc.rs  runtime_quote_strategy.rs  supported_pair.rs  syntax_helpers.rs
hylo-quotes/src/protocol_state/: accounts.rs  mod.rs  provider.rs  state.rs
hylo-quotes/src/protocol_state_quote_strategy/: mod.rs
hylo-quotes/src/protocol_state_strategy/: exchange.rs  mod.rs  router.rs  stability_pool.rs
hylo-quotes/src/simulated_operation/: earn_pool.rs  exchange.rs  mod.rs  stability_pool.rs
hylo-quotes/src/simulation_quote_strategy/: mod.rs
hylo-quotes/src/simulation_strategy/: exchange.rs  mod.rs  router.rs  stability_pool.rs
hylo-quotes/src/token_operation/: earn_pool.rs  exchange.rs  mod.rs  stability_pool.rs
hylo-quotes/tests/: integration_test.rs  integration_tests.rs  max_input_tests.rs  mvt_probe.rs  state_based_tests.rs
hylo-quotes/tests/data/: protocol-state-918-37508.json
hylo-stats/: Cargo.toml
hylo-stats/src/: client.rs  earn_pool_stats.rs  earn_pool_yield_math.rs  error.rs  lib.rs  types.rs
hylo-stats/tests/: earn_pool_stats_tests.rs
idls/: hylo_exchange.json  hylo_stability_pool.json
src/: exchange_client.rs  lib.rs  pda.rs  stability_pool_client.rs  util.rs
