[workspace]
members = [
    "hylo-clients",
    "hylo-core",
    "hylo-idl",
    "hylo-jupiter",
    "hylo-quotes",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
homepage = "https://hylo.so"

[workspace.dependencies]
anchor-client = { version = "=0.32.1", features = ["async"] }
anchor-lang = "=0.32.1"
anchor-spl = "=0.32.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = "1.3.3"
futures = "0.3.31"
hylo-clients = { version = "0.5.0", path = "hylo-clients" }
hylo-core = { version = "0.5.0", path = "hylo-core" }
hylo-fix = "0.5.1"
hylo-idl = { version = "0.5.0", path = "hylo-idl" }
hylo-jupiter = { version = "0.5.0", path = "hylo-jupiter" }
hylo-quotes = { version = "0.5.0", path = "hylo-quotes" }
itertools = "0.14.0"
hylo-jupiter-amm-interface = "0.6.0"
mpl-token-metadata = "5.1.1"
proptest = "1.5.0"
pyth-solana-receiver-sdk = "=1.1.0"
rust_decimal = "1.37.2"
serde = "1.0.225"
serde_json = "1.0.140"
solana-address-lookup-table-interface = "=2.2.2"
solana-rpc-client = "=2.3.13"
solana-rpc-client-api = "=2.3.13"
test-context = "0.3.0"
solana-loader-v3-interface = "5.0.0"
solana-transaction-status-client-types = "=2.3.13"
tokio = "1.36.0"
tokio-test = "0.4"
