[package]
name = "hylo-clients"
version.workspace = true
edition.workspace = true
description = "Hylo RPC clients"
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
anchor-client.workspace = true
anchor-spl.workspace = true
anchor-lang.workspace = true
hylo-idl.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-fix.workspace = true
pyth-solana-receiver-sdk.workspace = true
base64.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
itertools.workspace = true
solana-transaction-status-client-types.workspace = true
mpl-token-metadata.workspace = true
solana-address-lookup-table-interface.workspace = true
