[package]
name = "hylo-clients"
version.workspace = true
edition.workspace = true
description = "Hylo RPC clients"
license.workspace = true
homepage.workspace = true

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode.workspace = true
futures.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-fix.workspace = true
hylo-idl.workspace = true
itertools.workspace = true
mpl-token-metadata.workspace = true
pyth-solana-receiver-sdk.workspace = true
serde_json.workspace = true
solana-address-lookup-table-interface.workspace = true
solana-rpc-client-api.workspace = true
solana-transaction-status-client-types.workspace = true
tokio.workspace = true

[dev-dependencies]
