[package]
name = "hylo-core"
version.workspace = true
edition.workspace = true
description = "Core protocol data types, math, and utilities."
license.workspace = true
homepage.workspace = true

[dependencies]
hylo-fix.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
pyth-solana-receiver-sdk.workspace = true
switchboard-on-demand = { workspace = true, features = ["anchor"] }
rust_decimal.workspace = true
jupiter-amm-interface = { workspace = true, optional = true }
hylo-idl = { version = "0.1.16", optional = true }
serde.workspace = true

[features]
default = []
offchain = ["dep:hylo-idl", "dep:jupiter-amm-interface"]

[dev-dependencies]
proptest.workspace = true
flaky_test.workspace = true
