[package]
name = "hylo-core"
version.workspace = true
edition.workspace = true
description = "Core protocol data types, math, and utilities."
license.workspace = true
homepage.workspace = true

[features]
default = []
offchain = ["dep:hylo-idl", "dep:jupiter-amm-interface"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
hylo-fix.workspace = true
hylo-idl = { workspace = true, optional = true }
jupiter-amm-interface = { workspace = true, optional = true }
pyth-solana-receiver-sdk.workspace = true
serde.workspace = true

[dev-dependencies]
flaky_test.workspace = true
proptest.workspace = true
