[package]
name = "hylo-core"
version.workspace = true
edition.workspace = true
description = "Core protocol data types, math, and utilities."
license.workspace = true
homepage.workspace = true

[features]
default = []
offchain = ["dep:hylo-idl", "dep:hylo-jupiter-amm-interface"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
hylo-fix.workspace = true
hylo-idl = { workspace = true, optional = true }
hylo-jupiter-amm-interface = { workspace = true, optional = true }
itertools.workspace = true
pyth-solana-receiver-sdk.workspace = true
serde.workspace = true

[dev-dependencies]
anyhow.workspace = true
more-asserts.workspace = true
proptest.workspace = true
