[package]
name = "hylo-idl"
version.workspace = true
edition.workspace = true
description = "Protocol IDL definitions"
license.workspace = true
homepage.workspace = true
include = ["idls/", "src/"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
mpl-token-metadata.workspace = true
solana-address-lookup-table-interface.workspace = true
solana-loader-v3-interface.workspace = true
