[package]
name = "hylo-jupiter"
version.workspace = true
edition.workspace = true
description = "Jupiter integration for Hylo Exchange and Stability Pool."
license.workspace = true
homepage.workspace = true

[dependencies]
rust_decimal.workspace = true
bincode.workspace = true
hylo-fix.workspace = true
anyhow.workspace = true
anchor-lang.workspace = true
jupiter-amm-interface.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-idl.workspace = true
pyth-solana-receiver-sdk.workspace = true
tokio.workspace = true
anchor-spl.workspace = true
anchor-client.workspace = true

[dev-dependencies]
flaky_test.workspace = true
hylo-clients.workspace = true
