[package]
name = "hylo-jupiter"
version.workspace = true
edition.workspace = true
description = "Jupiter integration for Hylo Exchange and Stability Pool."
license.workspace = true
homepage.workspace = true

[dependencies]
rust_decimal.workspace = true
bincode.workspace = true
hylo-fix.workspace = true
anyhow.workspace = true
anchor-lang.workspace = true
jupiter-amm-interface.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
pyth-solana-receiver-sdk.workspace = true
anchor-spl.workspace = true
anchor-client.workspace = true
