[package]
name = "hylo-jupiter"
version.workspace = true
edition.workspace = true
description = "Jupiter integration for Hylo Exchange and Stability Pool."
license.workspace = true
homepage.workspace = true

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
bincode.workspace = true
hylo-clients.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-fix.workspace = true
hylo-idl.workspace = true
hylo-jupiter-amm-interface.workspace = true
hylo-quotes.workspace = true
pyth-solana-receiver-sdk.workspace = true
rust_decimal.workspace = true
tokio.workspace = true

[dev-dependencies]
