[package]
name = "hylo-quotes"
version = "0.1.0"
edition = "2021"
description = "Quote computation and execution layer for Hylo protocol"

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
hylo-clients.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-fix.workspace = true
hylo-idl.workspace = true
pyth-solana-receiver-sdk.workspace = true
tokio.workspace = true

[dev-dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-test = "0.4"
