[package]
name = "hylo-quotes"
version.workspace = true
edition.workspace = true
description = "Quote computation and execution layer for Hylo protocol"
license.workspace = true
homepage.workspace = true

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
hylo-clients.workspace = true
hylo-core = { workspace = true, features = ["offchain"] }
hylo-fix.workspace = true
hylo-idl.workspace = true
pyth-solana-receiver-sdk.workspace = true
tokio.workspace = true

[dev-dependencies]
base64.workspace = true
flaky_test.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-test.workspace = true
